tests/lang/oberon/types/fail/array-length-not-const.obr
MODULE Arrays;
    TYPE X = ARRAY 10 + 10 OF INTEGER;
END Arrays.
